@@ -6,15 +6,15 @@ DIST Search-Xapian-1.2.12.0.tar.gz 62289 SHA256 9bc0cb0b8d41f7160c29c9d774e16293
 DIST Search-Xapian-1.2.8.0.tar.gz 61945 SHA256 73b4b1bb8cbba850cf7337cc7aa0fd7c9bdf2827293591d793693a4e07f27f90 SHA512 bc34d41aca3c7541f273d64ec47b19d150c92d00c906fd6ee8ddc2031bf8928d3bde50f0429377c8e429faa44b9db623f032a9e30f9b61814e27896e752c0b42 WHIRLPOOL 09e1211d257cb1018fd27bb7cf8d05ae942bad29242730003fdfcb671072f32915522a4bea812b041d5e7664e447b47523dda548905735872193fe372c61cac1
 DIST Search-Xapian-1.2.9.0.tar.gz 62103 SHA256 9d608cd4afabe24323cffa1a96526fd0adcd99a5ed7c07a6845abcdb854f9485 SHA512 559f89810198d49b1641aba76e01fdf173f695810dcd2204e41b45c3b2d336e16068435bfddbaa9b5dba17f9e67ed340ac8fc807256c86881ef72def8cc7bae9 WHIRLPOOL 215290f7479742349ca75274c0e68b30f891bf1c2b4bdf55e402904ea51d562155c0d7c331b3ce24bbb82aa5a1f17a3ba6e2eedd7d2fd6a1fb27c1bbe6f607c2
 EBUILD Search-Xapian-1.2.10.0.ebuild 751 SHA256 9b2fe2500e4a49beb7b3c344355a7f04c89b3619fbf876daf8cb1088fb8f904c SHA512 90e6c9e0026c41a686587d0dbe26877ba5d3b8ed07fed26011c3322ea544827a7f2bd1c4db71dc20b3de9bc438d49061e7f6e16572e01fbd371f2cfb56d551bc WHIRLPOOL 41a4c7f6f3d0d370f68128d97b1fe7ce430674bde13e3f92f7791d699afbc3b876d0db594c4274df824e728103b4a2ef630f65a7e65c819d9ded2e6ad80c434a
-EBUILD Search-Xapian-1.2.12.0.ebuild 893 SHA256 3f24369acfa6138d1e52d0efc5cf5c9937de5a3a1411d03297ae8bcd1d72d954 SHA512 bc50dc39db1ddc8d42ca9e59143e421467370d4c43adab42c7e1066e1652d98e011ac8f25a8130a5d0fd2a0e6b40779496ead3c92f4163e078486f4f8b92238c WHIRLPOOL f519a7fde2b9dd2101d3088adca50c9428b17d77deda03b021199a1834eb7caf12d9cc567acb372c83fa37e72880c1766195f6f0b37124a9ee310c8ebf8ed79a
+EBUILD Search-Xapian-1.2.12.0.ebuild 891 SHA256 aa575470f28ebbcfc8c243e0357ceecbfcf7ea0fdf20b10b8276a88d01f3e300 SHA512 dad5e19568c4b699d9d04a5a58dfaae21c997848c9b073e36df7e6863d22d0e8961817bc3490fd7c703b0eb45fd6dbfa2ab6ca79f35c683077219315fefdce75 WHIRLPOOL d5a4e120124235ab8bbdc488ebffa7285e6272e8de9817c84b85e40a1dc41c00ca56ddb0cf2edd9e193aefd92a7531d04259f977463344b066fcb7cac7cffe40
 EBUILD Search-Xapian-1.2.8.ebuild 769 SHA256 e45affe0c2284cb954821823019201d56fe5123cb0ef6d8363ebcd77c38fe62b SHA512 ef5a805807de1cf5b8298201b343810311a8f68f68586dc10c5d61bc31edfb1ed7bc7f9cf7f759b129444444b4801532c04c7af603833aa376a5ae2b5f04ba22 WHIRLPOOL 8afc9e896de63517aa8baa2fbe64fc0cc4ad1ac2e2cf70351a13efbeb6cc7acc3164ef392aef0494b43f5f0988a03186e5f60c3e19ef98e5cedaccd88436e3e1
 EBUILD Search-Xapian-1.2.9.ebuild 771 SHA256 cba34e4f0000fbfaeb1865c7a8105a44c761f011b987828ae5e79cfd5447d0dc SHA512 506088ce8d05ed79e09304a35b67ea3eb0c6dd59b4c9d2b41863e5c9e4baad332a4539a0a3905e0233cbc85cb502bfc513dcc146d433c1e6e2c27796aed4f96c WHIRLPOOL 5e7c6b4df3ad581e698fac3f4cb5c830939926d190e11c70982529531273943e6755ec2d20674fa4a515e5442e121aba13ec2eee7bd042f3dfb892ea2ce994bc
-MISC ChangeLog 2303 SHA256 511c69fd2af27da7d619283934949ca40e287b2ea70e0753376ecb60c463f2fe SHA512 4e2f71b52d72d8b2d5541f73c4c7d3323b1d4efc7d68c37e3a74b500c9dc7f70f98d22c54b804ea015ba83eb4146ffc53644b07d3ca04270c5ceb37031e9055d WHIRLPOOL 1c2d892007e8714a299d1b56fa52a06498dde1df7e48f97dfa44d83a426f4f34813e99c5105a2c7794e7cc7c55939a1f39da11e0dda461bec6f27aaf6266fbd4
+MISC ChangeLog 2535 SHA256 8da867d7c35395a966c94ecff6362a88151b0b2c97ac53007df88defc8b8274d SHA512 d2bd4b44e85665c4710c54dcf0480949f2dd97291645a8c8fb7b8d7d94be8442e773e62398a421e807b0abfa925440473527d7d849a35fbd43aebb2e4394112a WHIRLPOOL fa6edc5a6307f11e4ebd341768786096e1e8f6e8db4f9c1b7e8c624b8868cacc5b77286b900482ae63a5781d117e7c2286143b5bd704530da871c9c6f8364291
 MISC metadata.xml 4012 SHA256 ae90211e6d211f8999619bbbd4448475469bc3972f8c9fff5233f5f67ae585a1 SHA512 80bdaacb65c220666597014f6b90e720a4542590c4f704b7dc36bab04af7b7e977eed3e70f0d007626a206d60251f79a2feada280483a3c2fd0e94bdd90e1561 WHIRLPOOL 6245403dba91bc74628f5e442d416206808843c9ca44bcab5297f36b2d2fba440861afac1c334f1b7671787bde2877deb3cde028ec7785a8f487bb905f738254
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEAREIAAYFAlBV4NoACgkQl5yvQNBFVTVsbgCdF88w+s8059+rT5cJFSMAnBz9
-++EAnRHiW30ukksbFnrUIWfxF7BQOJEw
-=u+CA
+iEYEAREIAAYFAlBWLmQACgkQl5yvQNBFVTX+MQCglmsiGfDkR5sj2vFPxoRiaDxQ
+1X8An2nCfMLXiazuo6Ha8dmNDHv6jgm1
+=rVfO
 -----END PGP SIGNATURE-----
