@@ -1,8 +1,18 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST Net-Server-0.97.tar.gz 92158 SHA256 4ebce7e92b8fcfcc127583b1dee49d40726860c080908ea381e619c047d8708f SHA512 855eed9ca1acab0684006a5b9efd46b55579462c9c8162d04379168a8b55758ca7716403a2284f8b8534c4f710c3f30d4b48e303ccd2490a848debe0c63c1396 WHIRLPOOL aa0c057b7817ce11be8e3b7827e8b4390cc6dc00b9f0b7ffbec2a62dd479336bfd4dd3f9d56ad2633ab6117cdecf3ff0a9ea0194589cb5c880828d3dff1ecc14
 DIST Net-Server-0.99.tar.gz 101559 SHA256 c11ab02942e1848fbcbdc321c1e5667f4fa3e55eb0723e7ecb9d5d3ab713ae5d SHA512 e9d233657a116cab054f269f73e0c341d265871238076850d43e1fbeb9a99e5abedf09a1c5f95834ef14de834c993f772820a380083c8a28b174360b4b8056fe WHIRLPOOL a5577152fbc87895da7393f255c863318c98f03f07be0d756485e018fcf9ec2e1745a188d0bd804f2b9a0346d788de3ef831440565f7f07a029a6e2bb714fc94
 DIST Net-Server-2.006.tar.gz 132015 SHA256 730f1a29c084c4791a9f4f9e2c6375efe14dbcb2bccd4a0f170e401ffa238a0d SHA512 f4bcdd95b4c2fc6fe273618cef731ace0f5b20da2775d55f93c7ec5657f0852aa498b5f326211ebf1a783e1382c33cbbf608c7411ad514f5aa4c7c8c1cc6d982 WHIRLPOOL 2bf1806300feeba334e2384d2cefe842d120b7d78f60f00267f0530337805cb902d944ec4c40ac45950a09fafb144ce8e3fb4eeed0e853dfea303d48a426d564
 EBUILD net-server-0.97.ebuild 653 SHA256 d75ae839615323b804bc98c94d1f02f2467cddc6b82a1d064c2b6e7d97f2a3a9 SHA512 4ec2b2e3f214f3846200b65be00ef1fcacb67296422b7ca1261c5f0d96d47fb95a9f5f88ad8ba112a69893b57464a4175a4f7c4dae48422b0f4cb150aba462ad WHIRLPOOL f1cc3c3279f9a76c56e39d8275f45be9cbd9383b7fcc0a9c50ec0ab4c2f63961235ce87e06594d10ad820fdfce444f44004a8c722587fcd9192f4f5858b7d11e
 EBUILD net-server-0.990.0.ebuild 535 SHA256 6204524aa21f5e37bfaff2133653c5234a1988507f81db95bf0cd9d40fbe44f0 SHA512 e3c8983c95bd908a1ab9bbaac995990b381ace1adee489362334c670830ed8e6fd0957dd54ea698fd8def6caff442b18026938818689c60fd7f1556d9ed3a1f0 WHIRLPOOL deaa68ea58c5000735abb1d4035c2c9f0112de964cea18ebe36cacf2e17afa9cf40f60adcef615d38bf82668fbc393d3a90c17769836420826ed63a7b8502042
-EBUILD net-server-2.6.0.ebuild 579 SHA256 e6cf078d2872cf7816da102875270c84a5d7134aa1e0df5639a1a8b5554572ea SHA512 107a6ceb6ff78b1758a2f7a23c9c842d2f75e67a89e0ab5ef649099f071f1bcede20ae3f7e49d94002ee1c958891271fc4f8d1e1b4f9609ed6e9da53beb57e39 WHIRLPOOL 19e05dbdf1f45429bf31447fa0bb644694c9d14d7286ebf971705093f8379be6b8deb37e225771442d34df04546745cf5669cbfbccdcc30b57194f029ed79ea9
-MISC ChangeLog 8566 SHA256 eed5a29d37e5ed88d53061b3f5e922c4a10dacb634b7a10d8448b8ade4b0695a SHA512 8bdef1a7ea24029843a089d7bc5d61eaab2c9d90a3805b923d985c0135de2cf7ceb168af340bb581d23c32c0889f579498e608e325ca928411e417d31ee74ef0 WHIRLPOOL 7e5b4f701e0e84c87abd6a2d7526aa05b9589e8f58a0ffdce00926209d0c597865ecd652bde55d14b546d9069153bc362e0f2543d101766d73a6662254e0bee0
+EBUILD net-server-2.6.0.ebuild 585 SHA256 d5dac0cc64d5b68ce11e21ddd815366edfca50114094d9416ce07f8bed0a9e5e SHA512 d88d8e6af94c6896fb3ed6629868284b860c00fe3625ab0be9ba9749c392a82ce335d77bc37cd98638ebb0220d0930f2f880a560368e4314b6ca41c5ae9a02d6 WHIRLPOOL 3fa113096f0f36608c4c2cd86a8558f3539265f7062ce07fcee1df4b9d521c5c946db7dded5300d8eb2c2bba24cf3d9b24ed222d295fe6933f7bd3ca03227026
+MISC ChangeLog 8693 SHA256 4c82501dd94a965d5af472668a9721112b8eb97750504080e2dfe4b3c701fb70 SHA512 b22add03daa616f9013c03556090a6fe9df7f6cf68ca23eaa2ebaa40bf459f88b4405b893eefb32489104c44486d198660541c5d2dd343027e9771008cc49534 WHIRLPOOL b88c703e0eea92cb91b417df105f0b13327cb0eab05c2d0dca92b2ad7a7743017e2c3e78cbb4088623e759ad2c9e48727b5862c0375273516050023364115922
 MISC metadata.xml 1891 SHA256 74beb73ad7a476a76b6c2247afb6b4f300e4cd6657088eb86a05accf0e17c031 SHA512 498e0ed634b3b2455a089bb36c0cdb7d86dbe6b71b47ab16db0995978cdaca78494677ba8dff42028fbd8e3b14584e003862cff994c09294d226bfb0afb94926 WHIRLPOOL b4ccc78b0a97beff065f4c99f6ecb7d3702264f2cce603c1e0015ee9719aae7703cd2a1b4519fb05878530896fdc5aa8ac49a10ec866e481add214feada83432
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.19 (GNU/Linux)
+
+iEYEAREIAAYFAlBW520ACgkQuUQtlDBCeQJKTwCeLpDBZMu/xKArDlDi7NqflJjU
+/vYAnjdIkQ9wYLX7ZciBCO+YPfOm+vWs
+=iu1K
+-----END PGP SIGNATURE-----
