@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/net-server
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/net-server/ChangeLog,v 1.71 2012/09/07 08:44:31 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/net-server/ChangeLog,v 1.72 2012/09/17 09:03:23 phajdan.jr Exp $
+
+  17 Sep 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> net-server-2.6.0.ebuild:
+  x86 stable wrt security bbug #412881
 
   07 Sep 2012; Agostino Sarubbo <ago@gentoo.org> net-server-2.6.0.ebuild:
   Stable for amd64, wrt bug #412881
